--- a/style.css
+++ b/style.css
@@ -2,45 +2,37 @@ body{
     background-color:black;
 }
 .conteiner{
-    max-width:70%;
-    height: 600px;
+    max-width:800px;
+    height: 500px;
     margin:auto;
     background-image:url(protese1.png);
+    background-size: cover;    
     background-repeat:no-repeat;
-    background-size:cover;
+    
+    box-sizing:border-box;
+    border-radius: 20px;
     
 }
 .cont{
-    margin-top: 40px;
+    
     max-width:50%;
-    height: 600px;
-    margin:left;
-    background-color:rgba(255, 255, 255, 0.6);
-    background-size:cover;
-    padding:10px;
+    height: 500px;
     box-sizing:border-box;
-    text-align:justify;
-    font-family:Arial, Helvetica, sans-serif;
+    margin:left;
+    background-color:rgba(255, 255, 255, 0.6);    
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
-h1{
-    font-size:26px;
-    margin:10px;
-    
-}
+
 #texto{
-    margin:10px;
-}
-h2{
-    font-size:20px;
-    text-align:lest;
-    padding-bottom:15px;
-    margin:10px;
-}
-input{
-    width:100%;
+    width:100%;    
+    box-sizing:border-box;
     
+}
+
+input{
+    width:100%;    
     padding:5px;
     border:none;
-    margin-bottom: 10px;
     box-sizing:border-box;
     }
